--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  color: #666;
+  color: white;
+  background-color: rgb(1, 51, 1);
   font-family: sans-serif;
   display: -webkit-box;
   display: -webkit-flex;
@@ -20,21 +21,6 @@ body {
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
-}
-
-header {
-  background-color: silver;
-  color: #fff;
-  -webkit-box-flex: 0;
-  -webkit-flex: none;
-  -ms-flex: none;
-  flex: none;
-}
-
-header h1 {
-  margin: 0;
-  font-size: 4.5em;
-  text-align: center;
 }
 
 main {
@@ -129,16 +115,18 @@ footer {
 #message {
   padding-top: 20px;
   font-size: 1.5em;
+  width: 60%;
+  float:right;
 }
 
 .btn {
   -moz-user-select: text;
-  background-color: #fff;
-  background: transparent;
+  background-color: purple;
+  /* background: transparent; */
   border-radius: 6px;
   border: 0;
-  border: 2px solid #666;
-  color: #666;
+  border: 2px solid rgb(84, 209, 12);
+  color: rgb(84, 209, 12);
   cursor: pointer;
   display: block;
   font: inherit;
@@ -169,21 +157,21 @@ footer {
   width: 100%;
   background-image: -webkit-repeating-linear-gradient(
     45deg,
-    #666,
-    #666 1px,
+    rgb(84, 209, 12),
+    rgb(84, 209, 12) 1px,
     transparent 2px,
     transparent 5px
   );
   background-image: repeating-linear-gradient(
     45deg,
-    #666,
-    #666 1px,
+    rgb(84, 209, 12),
+    rgb(84, 209, 12) 1px,
     transparent 2px,
     transparent 5px
   );
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  border-top: 1px solid #666;
+  border-top: 1px solid rgb(94, 3, 94);
   position: absolute;
   left: 0;
   bottom: 0;
@@ -191,13 +179,13 @@ footer {
 }
 
 .btn--stripe:disabled {
-  background-color: #999;
+  background-color: black;
   color: #fff;
   border-color: #666;
 }
 
 .btn--stripe:hover {
-  background-color: #666;
+  background-color: rgb(94, 3, 94);
   color: #fff;
   border-color: #000;
 }
@@ -219,4 +207,26 @@ footer {
     transparent 5px
   );
   border-top: 1px solid #000;
+}
+
+.hideLater {
+  justify-content: flex-start;
+  width: 70%;
+  text-align: center;
+}
+
+.counterBox {
+  justify-content: flex-end;
+  width:30%;
+  background-color: black;
+  height:100%;
+}
+header {
+  display:flex;
+}
+
+#title{
+  justify-content: flex-start;
+  width: 70%;
+  text-align: center;
 }
