added music and updated styling a bit, no mobile verision avalieble

--- a/css/styles.css
+++ b/css/styles.css
@@ -251,3 +251,12 @@ header {
   width: 70%;
   text-align: center;
 }
+
+@media only screen and (max-width:990px){
+  .hideLater{
+    display:none;
+  }
+  #message{
+    margin:0px;
+  }
+}
